# Server/api/swagger/swagger.yaml
@@ -3,7 +3,7 @@ info:
   version: 0.0.2
   title: ServU
 
-host: 192.168.21.55:8001
+host: 127.0.0.1:3000
 # basePath prefixes all resource paths
 basePath: /api
 #
@@ -19,8 +19,6 @@ consumes:
 produces:
   - application/json
   #idem xml
-
-
 
 
 parameters:
@@ -45,6 +43,14 @@ parameters:
     required: true
     schema:
       $ref: "#/definitions/action_post"
+      
+  login:
+    name: login
+    description: "login object"
+    in: body
+    required: true
+    schema:
+      $ref: "#/definitions/login"
 
 
 
@@ -57,7 +63,7 @@ paths:
 
   /users:
     x-swagger-router-controller: users
-   
+
     post:
       operationId: postUsers
       description: Add a new user
@@ -118,6 +124,21 @@ paths:
       responses:
         "204":
           description: Success
+        "404":
+          description: User not found
+
+  /users/login:
+    x-swagger-router-controller: users
+    post:
+      operationId: getLogin
+      description: Vérification du login
+      parameters:
+        - $ref: "#/parameters/login"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/loginResult"
         "404":
           description: User not found
 
@@ -449,6 +470,25 @@ paths:
 # complex objects have schema definitions
 
 definitions:
+
+  login:
+    type: object
+    required:
+      - username
+      - password
+    properties:
+      username:
+        type: string
+      password:
+        type: string
+        format: password
+        
+  loginResult:
+    type: object
+    properties:
+      reponce:
+        type: boolean
+
   user:
     type: object
 
